--- a/stax-buddy-builder/templates/buddypress/assets/buddypress.css
+++ b/stax-buddy-builder/templates/buddypress/assets/buddypress.css
@@ -190,12 +190,14 @@ body.buddypress article.page > .entry-header {
     .buddypress-wrap .profile-fields td {
       font-size: 16px; } }
 
-.buddypress-wrap #notification-select {
+.buddypress-wrap #notification-select,
+.buddypress-wrap #invitation-select {
   font-size: 12px;
   max-width: 250px;
   display: inline-block; }
   @media screen and (min-width: 46.8em) {
-    .buddypress-wrap #notification-select {
+    .buddypress-wrap #notification-select,
+    .buddypress-wrap #invitation-select {
       font-size: 14px; } }
 
 /**
@@ -644,7 +646,8 @@ body.friends.friend-requests .buddypress-wrap .subnav-filters {
     .buddypress-wrap .subnav-filters .user-messages-search {
       float: right; } }
 
-.buddypress-wrap .notifications-options-nav input#notification-bulk-manage {
+.buddypress-wrap .notifications-options-nav input#notification-bulk-manage,
+.buddypress-wrap .invitations-options-nav input#invitation-bulk-manage {
   border: 0;
   border-radius: 0;
   line-height: 1.6; }
@@ -1146,6 +1149,22 @@ body.friends.friend-requests .buddypress-wrap .subnav-filters {
       -webkit-box-shadow: 0 0 6px 0 #e2e8f0;
       -moz-box-shadow: 0 0 6px 0 #e2e8f0;
       box-shadow: 0 0 6px 0 #e2e8f0; }
+  .activity-update-form #whats-new-content {
+    padding: 0 0 20px 0; }
+  .activity-update-form #whats-new-buttons {
+    max-width: 100%;
+    padding: 0 0 1em 0;
+    z-index: 1000;
+    margin: 0 0 0.5em 55px;
+    display: flex;
+    gap: 0.6em;
+    margin-left: 55px; }
+    .activity-update-form #whats-new-buttons > li {
+      list-style: none; }
+      .activity-update-form #whats-new-buttons > li button {
+        padding: 5px 10px;
+        width: auto;
+        height: auto; }
   .activity-update-form #whats-new-post-in-box {
     margin: 10px 0;
     display: flex;
@@ -1493,6 +1512,81 @@ body.activity-permalink .activity-list .activity-comments {
 
 /**
 *-----------------------------------------------------
+* @section 3.1.2a - Member/Group Preview Cards
+*-----------------------------------------------------
+*/
+.bp-member-preview-cover,
+.bp-group-preview-cover {
+  position: relative;
+  min-height: 150px;
+  background: #c5c5c5; }
+  .bp-member-preview-cover img,
+  .bp-group-preview-cover img {
+    background: #c5c5c5;
+    object-fit: cover;
+    border: 0;
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    z-index: 1;
+    height: 150px; }
+
+.bp-member-short-description,
+.bp-group-short-description {
+  position: relative;
+  text-align: center; }
+
+.bp-member-avatar-content,
+.bp-group-avatar-content {
+  width: 120px;
+  position: relative;
+  z-index: 2;
+  margin: auto; }
+  .bp-member-avatar-content img.profile-photo,
+  .bp-member-avatar-content img.group-photo,
+  .bp-group-avatar-content img.profile-photo,
+  .bp-group-avatar-content img.group-photo {
+    border: solid 2px #fff;
+    background: rgba(255, 255, 255, 0.8);
+    height: 80px;
+    width: 80px; }
+
+.bp-member-avatar-content.has-cover-image,
+.bp-group-avatar-content.has-cover-image {
+  width: 200px;
+  margin-top: -75px; }
+  .bp-member-avatar-content.has-cover-image img.profile-photo,
+  .bp-member-avatar-content.has-cover-image img.group-photo,
+  .bp-group-avatar-content.has-cover-image img.profile-photo,
+  .bp-group-avatar-content.has-cover-image img.group-photo {
+    height: inherit;
+    width: inherit; }
+
+.bp-member-short-description-title a,
+.bp-group-short-description-title a {
+  font-weight: 600; }
+
+@media screen and (max-width: 767px) {
+  .bp-member-avatar-content,
+  .bp-group-avatar-content {
+    width: 100%;
+    margin-bottom: 15px; }
+    .bp-member-avatar-content img.profile-photo,
+    .bp-member-avatar-content img.group-photo,
+    .bp-group-avatar-content img.profile-photo,
+    .bp-group-avatar-content img.group-photo {
+      margin: auto; }
+  .bp-profile-button {
+    position: relative;
+    margin-top: 15px; } }
+
+@media screen and (min-width: 768px) {
+  .bp-profile-button {
+    text-align: right; } }
+
+/**
+*-----------------------------------------------------
 * @section 3.1.3 - Activity Comments
 *-----------------------------------------------------
 */
@@ -1618,6 +1712,14 @@ form.ac-form {
 * @section 3.2 - Blogs Loop
 *----------------------------------------------------------
 */
+.buddypress-wrap .blogs-list li .item-avatar img.avatar-150 {
+  max-width: 150px;
+  max-height: 150px; }
+
+.buddypress-wrap .blogs-list li .item-avatar img.avatar-50 {
+  max-width: 50px;
+  max-height: 50px; }
+
 @media screen and (min-width: 1025px) {
   .buddypress-wrap .blogs-list li .item-block {
     float: none;
@@ -1644,8 +1746,21 @@ form.ac-form {
 .buddypress-wrap .groups-list li .group-details {
   clear: left; }
 
+.buddypress-wrap .groups-list li .group-desc {
+  border: 1px solid #e2e8f0;
+  border-radius: 10px;
+  background-clip: padding-box;
+  font-size: 13px;
+  color: #737373;
+  font-style: italic;
+  margin: 10px auto 0;
+  padding: 1em; }
+  @media screen and (min-width: 1025px) {
+    .buddypress-wrap .groups-list li .group-desc {
+      font-size: 16px; } }
+
 .buddypress-wrap .groups-list li p {
-  margin: 0; }
+  margin: 0 0 0.5em; }
 
 @media screen and (min-width: 1025px) {
   .buddypress-wrap .groups-list li .item {
@@ -1676,10 +1791,21 @@ form.ac-form {
 *----------------------------------------------------------
 */
 .buddypress-wrap .members-list li .member-name {
-  margin: 10px 0; }
+  margin-bottom: 10px; }
+
+.buddypress-wrap .members-list li .item-extra-content {
+  clear: both;
+  font-size: 14px; }
 
 .buddypress-wrap .members-list li .user-update {
-  font-size: 13px; }
+  border: 1px solid #e2e8f0;
+  border-radius: 10px;
+  background-clip: padding-box;
+  color: #737373;
+  font-style: italic;
+  font-size: 13px;
+  margin: 15px auto;
+  padding: 1em; }
   @media screen and (min-width: 46.8em) {
     .buddypress-wrap .members-list li .user-update {
       font-size: 16px; } }
@@ -1965,16 +2091,107 @@ body.no-js .single-item-header .js-self-profile-button {
 */
 /**
 *-----------------------------------------------------
+* @subsection 5.1.1 - item-header Groups
+*
+* Group Specific Item Header
+*-----------------------------------------------------
+*/
+.groups-header .bp-group-type-list {
+  font-size: 18px;
+  margin: 0;
+  color: #4a5568;
+  display: flex; }
+  .groups-header .bp-group-type-list strong {
+    padding-right: 1em;
+    white-space: nowrap; }
+
+.groups-header .bp-feedback {
+  clear: both; }
+
+.groups-header .group-item-actions {
+  float: left;
+  margin: 0 0 15px 15px;
+  padding-top: 0;
+  width: 100%; }
+
+.groups-header .moderators-lists {
+  margin-top: 0; }
+  .groups-header .moderators-lists .moderators-title {
+    font-size: 14px; }
+  .groups-header .moderators-lists .user-list {
+    margin: 0 0 5px; }
+    .groups-header .moderators-lists .user-list ul:after {
+      clear: both;
+      content: "";
+      display: table; }
+    .groups-header .moderators-lists .user-list li {
+      display: inline-block;
+      float: none;
+      margin-left: 4px;
+      padding: 4px; }
+  .groups-header .moderators-lists img.avatar {
+    box-shadow: none;
+    float: none;
+    height: 30px;
+    margin: 0;
+    max-width: 100%;
+    width: 30px; }
+
+@media screen and (min-width: 1025px) {
+  .groups-header div#item-header-content {
+    float: left;
+    margin-left: 10%;
+    text-align: left;
+    padding-top: 15px;
+    width: 42%; }
+  .groups-header .group-item-actions {
+    float: right;
+    margin: 0 0 15px 15px;
+    text-align: right;
+    width: 20%; }
+  .groups-header .groups-meta {
+    clear: both; } }
+
+.groups-header .desc-wrap {
+  background: #edf2f7;
+  border: 1px solid #e2e8f0;
+  margin: 0 0 15px;
+  padding: 1em;
+  text-align: center; }
+  .groups-header .desc-wrap .group-description {
+    background: #f7fafc;
+    padding: 1em;
+    text-align: left; }
+    .groups-header .desc-wrap .group-description p {
+      margin: 0;
+      padding: 0; }
+
+/**
+*-----------------------------------------------------
 * @subsection 5.1.2 - Item Header User Accounts
 *
 * User Accounts Specific Item Header
 *-----------------------------------------------------
 */
-.bp-user .users-header .user-nicename {
+body.buddypress.bp-user .buddypress-wrap .users-header h2.user-nicename {
+  margin-top: 0;
   margin-bottom: 5px; }
 
-.bp-user .member-header-actions * > * {
-  display: block; }
+body.buddypress.bp-user .buddypress-wrap .users-header .bp-member-type-list {
+  padding-bottom: 0.5em;
+  font-size: 18px;
+  margin: 0;
+  color: #4a5568;
+  display: flex; }
+  body.buddypress.bp-user .buddypress-wrap .users-header .bp-member-type-list strong {
+    padding-right: 1em;
+    white-space: nowrap; }
+
+body.buddypress.bp-user .buddypress-wrap .member-header-actions {
+  overflow: hidden;
+  padding-left: 0; }
+  body.buddypress.bp-user .buddypress-wrap .member-header-actions * > * {
+    display: block; }
 
 /**
 *-----------------------------------------------------------
@@ -2887,7 +3104,8 @@ body.buddypress.settings.data #buddypress.buddypress-wrap .item-body p a {
   cursor: pointer;
   opacity: 0.4; }
 
-.buddypress-wrap #notification-bulk-manage[disabled] {
+.buddypress-wrap #notification-bulk-manage[disabled],
+.buddypress-wrap #invitation-bulk-manage[disabled] {
   display: none; }
 
 .buddypress-wrap fieldset legend {
@@ -3155,7 +3373,8 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   border: 1px solid #c0cddf; }
 
 @media screen and (min-width: 768px) {
-  .buddypress-wrap .notifications-options-nav .select-wrap {
+  .buddypress-wrap .notifications-options-nav .select-wrap,
+  .buddypress-wrap .invitations-options-nav .select-wrap {
     float: left; } }
 
 #buddypress form#bp-data-export button[type="submit"] {
@@ -3182,7 +3401,8 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 
 .buddypress-wrap form.bp-dir-search-form,
 .buddypress-wrap form.bp-messages-search-form,
-.buddypress-wrap form[data-bp-search].bp-invites-search-form {
+.buddypress-wrap form[data-bp-search].bp-invites-search-form,
+.buddypress-wrap form#group-members-search {
   border: 1px solid #e2e8f0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3198,7 +3418,8 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   width: 100%; }
   .buddypress-wrap form.bp-dir-search-form label,
   .buddypress-wrap form.bp-messages-search-form label,
-  .buddypress-wrap form[data-bp-search].bp-invites-search-form label {
+  .buddypress-wrap form[data-bp-search].bp-invites-search-form label,
+  .buddypress-wrap form#group-members-search label {
     margin: 0; }
   .buddypress-wrap form.bp-dir-search-form input[type="search"],
   .buddypress-wrap form.bp-dir-search-form input[type="text"],
@@ -3208,7 +3429,10 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   .buddypress-wrap form.bp-messages-search-form button[type="submit"],
   .buddypress-wrap form[data-bp-search].bp-invites-search-form input[type="search"],
   .buddypress-wrap form[data-bp-search].bp-invites-search-form input[type="text"],
-  .buddypress-wrap form[data-bp-search].bp-invites-search-form button[type="submit"] {
+  .buddypress-wrap form[data-bp-search].bp-invites-search-form button[type="submit"],
+  .buddypress-wrap form#group-members-search input[type="search"],
+  .buddypress-wrap form#group-members-search input[type="text"],
+  .buddypress-wrap form#group-members-search button[type="submit"] {
     background: none;
     border: 0;
     -webkit-border-radius: 0;
@@ -3221,7 +3445,9 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   .buddypress-wrap form.bp-messages-search-form input[type="search"],
   .buddypress-wrap form.bp-messages-search-form input[type="text"],
   .buddypress-wrap form[data-bp-search].bp-invites-search-form input[type="search"],
-  .buddypress-wrap form[data-bp-search].bp-invites-search-form input[type="text"] {
+  .buddypress-wrap form[data-bp-search].bp-invites-search-form input[type="text"],
+  .buddypress-wrap form#group-members-search input[type="search"],
+  .buddypress-wrap form#group-members-search input[type="text"] {
     float: left;
     line-height: 1.5;
     padding: 10px;
@@ -3236,7 +3462,8 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
         width: 80%; } }
   .buddypress-wrap form.bp-dir-search-form button[type="submit"],
   .buddypress-wrap form.bp-messages-search-form button[type="submit"],
-  .buddypress-wrap form[data-bp-search].bp-invites-search-form button[type="submit"] {
+  .buddypress-wrap form[data-bp-search].bp-invites-search-form button[type="submit"],
+  .buddypress-wrap form#group-members-search button[type="submit"] {
     float: right;
     font-size: inherit;
     font-weight: 400;
@@ -3251,7 +3478,8 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
         width: 20%; } }
     .buddypress-wrap form.bp-dir-search-form button[type="submit"] span,
     .buddypress-wrap form.bp-messages-search-form button[type="submit"] span,
-    .buddypress-wrap form[data-bp-search].bp-invites-search-form button[type="submit"] span {
+    .buddypress-wrap form[data-bp-search].bp-invites-search-form button[type="submit"] span,
+    .buddypress-wrap form#group-members-search button[type="submit"] span {
       font-family: dashicons;
       font-size: 18px;
       line-height: 1.6; }
@@ -3264,7 +3492,8 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
         color: #8BA1BA; }
   .buddypress-wrap form.bp-dir-search-form button[type="submit"].bp-show,
   .buddypress-wrap form.bp-messages-search-form button[type="submit"].bp-show,
-  .buddypress-wrap form[data-bp-search].bp-invites-search-form button[type="submit"].bp-show {
+  .buddypress-wrap form[data-bp-search].bp-invites-search-form button[type="submit"].bp-show,
+  .buddypress-wrap form#group-members-search button[type="submit"].bp-show {
     height: auto;
     left: 0;
     overflow: visible;
@@ -3272,14 +3501,17 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
     top: 0; }
   .buddypress-wrap form.bp-dir-search-form input[type="search"]::-webkit-search-cancel-button,
   .buddypress-wrap form.bp-messages-search-form input[type="search"]::-webkit-search-cancel-button,
-  .buddypress-wrap form[data-bp-search].bp-invites-search-form input[type="search"]::-webkit-search-cancel-button {
+  .buddypress-wrap form[data-bp-search].bp-invites-search-form input[type="search"]::-webkit-search-cancel-button,
+  .buddypress-wrap form#group-members-search input[type="search"]::-webkit-search-cancel-button {
     -webkit-appearance: searchfield-cancel-button; }
   .buddypress-wrap form.bp-dir-search-form input[type="search"]::-webkit-search-results-button,
   .buddypress-wrap form.bp-dir-search-form input[type="search"]::-webkit-search-results-decoration,
   .buddypress-wrap form.bp-messages-search-form input[type="search"]::-webkit-search-results-button,
   .buddypress-wrap form.bp-messages-search-form input[type="search"]::-webkit-search-results-decoration,
   .buddypress-wrap form[data-bp-search].bp-invites-search-form input[type="search"]::-webkit-search-results-button,
-  .buddypress-wrap form[data-bp-search].bp-invites-search-form input[type="search"]::-webkit-search-results-decoration {
+  .buddypress-wrap form[data-bp-search].bp-invites-search-form input[type="search"]::-webkit-search-results-decoration,
+  .buddypress-wrap form#group-members-search input[type="search"]::-webkit-search-results-button,
+  .buddypress-wrap form#group-members-search input[type="search"]::-webkit-search-results-decoration {
     display: none; }
 
 .buddypress-wrap form#group-members-search:hover {
@@ -3289,11 +3521,16 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   line-height: 1.4;
   padding: 0.1em 0.7em; }
 
-.buddypress-wrap .current-member-type {
+.buddypress-wrap .current-member-type,
+.buddypress-wrap .current-group-type {
   font-style: italic; }
 
 .buddypress-wrap .dir-form {
   clear: both; }
+
+.bp-user [data-bp-search] form input[type="search"],
+.bp-user [data-bp-search] form input[type="text"] {
+  padding: 6px 10px 7px; }
 
 .budypress.no-js form.bp-dir-search-form button[type="submit"] {
   height: auto;
@@ -3472,7 +3709,8 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 .buddypress .buddypress-wrap ul.button-nav:not(.button-tabs) li a,
 .buddypress .buddypress-wrap .generic-button a,
 .buddypress .buddypress-wrap .comment-reply-link,
-.buddypress .buddypress-wrap a.bp-title-button {
+.buddypress .buddypress-wrap a.bp-title-button,
+.buddypress .buddypress-wrap .activity-read-more a {
   background: #fff;
   /* Old browsers */
   border-color: #cbd5e0;
@@ -3510,7 +3748,9 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 .buddypress .buddypress-wrap .button-nav li a:hover,
 .buddypress .buddypress-wrap .button-nav li.current a,
 .buddypress .buddypress-wrap .generic-button a:hover,
-.buddypress .buddypress-wrap .comment-reply-link:hover {
+.buddypress .buddypress-wrap .comment-reply-link:hover,
+.buddypress .buddypress-wrap .activity-read-more a:focus,
+.buddypress .buddypress-wrap .activity-read-more a:hover {
   background: #edf2f7;
   border-color: #8ba1ba;
   color: #4a5568;
@@ -3523,6 +3763,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 .buddypress .buddypress-wrap input[type="button"].disabled,
 .buddypress .buddypress-wrap input[type="reset"].disabled,
 .buddypress .buddypress-wrap input[type="submit"][disabled="disabled"],
+.buddypress .buddypress-wrap input[type="submit"]:disabled,
 .buddypress .buddypress-wrap button.pending,
 .buddypress .buddypress-wrap button.disabled,
 .buddypress .buddypress-wrap div.pending a,
@@ -3657,10 +3898,12 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 .buddypress-wrap ul.item-list li .group-remove-invite-button span.icons:before {
   content: "\f153"; }
 
-.buddypress-wrap .bp-invites-filters ul li #bp-invites-next-page:before {
+.buddypress-wrap .bp-invites-filters ul li #bp-invites-next-page:before,
+.buddypress-wrap .bp-messages-filters ul li #bp-messages-next-page:before {
   content: "\f345"; }
 
-.buddypress-wrap .bp-invites-filters ul li #bp-invites-prev-page:before {
+.buddypress-wrap .bp-invites-filters ul li #bp-invites-prev-page:before,
+.buddypress-wrap .bp-messages-filters ul li #bp-messages-prev-page:before {
   content: "\f341"; }
 
 .buddypress-wrap .warn {
@@ -3784,7 +4027,8 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 .buddypress-wrap .bp-feedback.warning .bp-icon,
 .buddypress-wrap .bp-feedback.loading .bp-icon,
 .buddypress-wrap .bp-feedback.success .bp-icon,
-.buddypress-wrap .bp-feedback.updated .bp-icon {
+.buddypress-wrap .bp-feedback.updated .bp-icon,
+.buddypress-wrap .bp-feedback.bp-sitewide-notice .bp-icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
